@@ -249,6 +249,16 @@ It consists of the following fields:
 
   .. versionadded:: 0.3.9
 
+* max_segment_size
+
+  **optional**, **type**: u16, **alias**: mss
+
+  Set value for tcp level socket option TCP_MAXSEG, which set the maximum segment size TCP option in SYN packet.
+
+  **default**: not set
+
+  .. versionadded:: 0.4.0
+
 * backlog
 
   **optional**, **type**: unsigned int
@@ -567,15 +577,15 @@ Keys:
 
 * max_segment_size
 
-  **optional**, **type**: u32, **alias**: mss
+  **optional**, **type**: u16, **alias**: mss
 
-  Set value for tcp level socket option TCP_MAXSEG, the maximum segment size for outgoing TCP packets.
+  Set value for tcp level socket option TCP_MAXSEG, which set the maximum segment size TCP option in SYN packet.
 
   **default**: not set
 
 * time_to_live
 
-  **optional**, **type**: u32, **alias**: ttl
+  **optional**, **type**: u8, **alias**: ttl
 
   Set value for ip level socket option IP_TTL, the time-to-live field in each sent packet.
 
@@ -583,7 +593,7 @@ Keys:
 
 * hop_limit
 
-  **optional**, **type**: u32
+  **optional**, **type**: u8
 
   Set value for ipv6 level socket option IPV6_UNICAST_HOPS, the hop limit field in each sent packet.
 
@@ -642,7 +652,7 @@ Keys:
 
 * time_to_live
 
-  **optional**, **type**: u32, **alias**: ttl
+  **optional**, **type**: u8, **alias**: ttl
 
   Set value for ip level socket option IP_TTL, the time-to-live field in each sent packet.
 
@@ -650,7 +660,7 @@ Keys:
 
 * hop_limit
 
-  **optional**, **type**: u32
+  **optional**, **type**: u8
 
   Set value for ipv6 level socket option IPV6_UNICAST_HOPS, the hop limit field in each sent packet.
 
